--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,10 @@ beautifulsoup4>=4.12.0
 aiohttp>=3.8.0
 lxml>=4.9.0
 
+# Machine Learning
+scikit-learn>=1.3.0
+numpy>=1.24.0
+
 # Testing
 pytest>=7.0.0
 pytest-asyncio>=0.21.0
