Update .gitignore to exclude .env files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
 node_modules
+
+# Environment files with secrets
+.env
+.env.local
+.env.*.local
+*.env
+
+# Python
+__pycache__/
+*.py[cod]
+*.so
+.Python
+venv/
+.venv/
+
+# Database
+*.db
+*.sqlite
+
+# IDE
+.idea/
+.vscode/
+*.swp
+
+# OS
+.DS_Store
+Thumbs.db
